Redirect index to register page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>Welcome</title>
-  <meta http-equiv="refresh" content="0; url=login.html">
+  <meta http-equiv="refresh" content="0; url=register.html">
 </head>
 <body>
-  <p>Redirecting to Login...</p>
+  <p>Redirecting to Register...</p>
 </body>
 </html>
